--- a/games/loveniovoce/loveniovoce.html
+++ b/games/loveniovoce/loveniovoce.html
@@ -2,7 +2,7 @@
 <html lang="cs">
 <head>
 <meta charset="UTF-8">
-<title>Jednoduchá hra – Ovoce</title>
+<title>Lov ovoce</title>
 <style>
     body {
         font-family: Arial, sans-serif;
@@ -53,7 +53,7 @@
         align-items: center;
         font-size: 48px;
         font-weight: bold;
-        z-index: 9999;
+        z-index: 9000;
         opacity: 0;
         pointer-events: none;
         transition: opacity 0.3s linear;
@@ -81,15 +81,105 @@
         100% { transform: scale(1.0); opacity: 1; }
     }
 
-    /* Trochu menší text HUD na úzkých displejích */
+    /* STARTOVACÍ MENU – výběr režimu */
+    #modeOverlay {
+        position: fixed;
+        left: 0;
+        top: 0;
+        width: 100vw;
+        height: 100vh;
+        background: rgba(0,0,0,0.9);
+        color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 10000;
+    }
+
+    #modeOverlay.hidden {
+        display: none;
+    }
+
+    #modeContent {
+        text-align: center;
+        max-width: 90vw;
+    }
+
+    #modeContent h1 {
+        margin-bottom: 10px;
+        font-size: 40px;
+    }
+
+    #modeContent p {
+        margin: 6px 0;
+    }
+
+    #modeContent .buttons {
+        margin-top: 15px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 10px;
+    }
+
+    #modeContent button {
+        padding: 10px 18px;
+        border-radius: 8px;
+        border: none;
+        cursor: pointer;
+        font-size: 16px;
+        font-weight: bold;
+    }
+
+    #modeContent button[data-mode="basic"] {
+        background: #4caf50;
+        color: white;
+    }
+
+    #modeContent button[data-mode="advanced"] {
+        background: #ff9800;
+        color: white;
+    }
+
+    #modeContent button[data-mode="moving"] {
+        background: #e91e63;
+        color: white;
+    }
+
+    #modeContent .hint {
+        margin-top: 12px;
+        font-size: 14px;
+        opacity: 0.8;
+    }
+
     @media (max-width: 768px) {
         #hud {
+            font-size: 14px;
+        }
+        #modeContent h1 {
+            font-size: 30px;
+        }
+        #modeContent button {
             font-size: 14px;
         }
     }
 </style>
 </head>
 <body>
+
+<!-- STARTOVACÍ MENU -->
+<div id="modeOverlay">
+    <div id="modeContent">
+        <h1>Lov ovoce</h1>
+        <p>Zvol si režim hry:</p>
+        <div class="buttons">
+            <button data-mode="basic">🍒 Základní hra</button>
+            <button data-mode="advanced">🛡 Pokročilá</button>
+            <button data-mode="moving">⚡ Pokročilá + pohyb ovoce</button>
+        </div>
+        <p class="hint">Doporučení: pro ~10leté dítě začni „Základní hra“.</p>
+    </div>
+</div>
 
 <div id="hud">
     ⏱ Čas: <span id="time">0.0</span> s  
@@ -99,6 +189,7 @@
     <br>
     ⭐ Skóre: <span id="score">0</span>
     | ⚡ Combo: <span id="combo">0</span> (max: <span id="bestCombo">0</span>)
+    | 🎮 Režim: <span id="modeLabel">-</span>
     <br>
     P = pauza (PC), dvojťuk/dvouprstý tap = pauza (mobil)
 </div>
@@ -114,6 +205,21 @@
 <audio id="missSound" src="miss.wav" preload="auto"></audio>
 
 <script>
+// --- REŽIM HRY -------------------------------------------------------------
+const MODE_BASIC    = "basic";
+const MODE_ADVANCED = "advanced";
+const MODE_MOVING   = "moving";
+
+let gameMode = null;  // nastaví se po kliknutí v menu
+
+function isAdvancedMode() {
+    return gameMode === MODE_ADVANCED || gameMode === MODE_MOVING;
+}
+function isMovingMode() {
+    return gameMode === MODE_MOVING;
+}
+
+// --- STAV HRY -------------------------------------------------------------
 let gameRunning           = false;
 let waitingForLevelStart  = false;
 let gameOver              = false;
@@ -123,7 +229,7 @@ let hit    = 0;
 let total  = 0;
 let level  = 1;
 
-// NOVÉ: skóre a životy
+// skóre a životy
 let score      = 0;
 let combo      = 0;
 let bestCombo  = 0;
@@ -137,8 +243,8 @@ let spawnInterval = null;
 const HITS_PER_LEVEL = 10;
 
 // základní parametry obtížnosti – POMALEJŠÍ START
-let baseSpawnDelay = 1200;   // ms (dříve 800)
-let baseLifetime   = 3000;   // ms (dříve 2000)
+let baseSpawnDelay = 1200;   // ms
+let baseLifetime   = 3000;   // ms
 let baseSquareSize = 80;     // px
 
 const minSpawnDelay = 250;
@@ -162,6 +268,7 @@ let squareSize = baseSquareSize;
 const bottomSafeZone = isSmallScreen ? 80 : 0;
 const topSafeZone    = isSmallScreen ? 30 : 0;
 
+// --- DOM prvky -------------------------------------------------------------
 const timeEl      = document.getElementById("time");
 const hitEl       = document.getElementById("hit");
 const totalEl     = document.getElementById("total");
@@ -170,10 +277,13 @@ const livesEl     = document.getElementById("lives");
 const scoreEl     = document.getElementById("score");
 const comboEl     = document.getElementById("combo");
 const bestComboEl = document.getElementById("bestCombo");
+const modeLabelEl = document.getElementById("modeLabel");
 const gameArea    = document.getElementById("gameArea");
 
 const levelOverlay = document.getElementById("levelOverlay");
 const levelText    = document.getElementById("levelText");
+
+const modeOverlay  = document.getElementById("modeOverlay");
 
 const hitSound  = document.getElementById("hitSound");
 const missSound = document.getElementById("missSound");
@@ -182,6 +292,26 @@ const missSound = document.getElementById("missSound");
 const levelFruitEmojis = ["🍒","🍎","🍇","🍓","🍌","🍍","🍉","🥝"];
 const levelFruitNames  = ["Třešeň","Jablko","Hrozny","Jahoda","Banán","Ananas","Meloun","Kiwi"];
 
+// POWER-UPY (jen v pokročilých režimech)
+const GOLD_EMOJI  = "⭐";
+const HEART_EMOJI = "💗";
+const BOMB_EMOJI  = "💣";
+
+const GOLD_CHANCE  = 0.06; // 6 % všech spawnů
+const HEART_CHANCE = 0.04; // 4 %
+const BOMB_CHANCE  = 0.08; // 8 %
+
+// BOSS (jen v pokročilých)
+const BOSS_LEVEL_PERIOD  = 5;    // každý 5. level
+const BOSS_BASE_HP       = 8;
+const BOSS_TIME_LIMIT    = 8000; // ms
+const BOSS_LIFE_PENALTY  = 3;
+
+let inBossFight = false;
+let bossHP      = 0;
+let bossTimerId = null;
+
+// --- Pomocné funkce -------------------------------------------------------
 function getFruitEmojiForLevel(l) {
     const idx = (l - 1) % levelFruitEmojis.length;
     return levelFruitEmojis[idx];
@@ -190,6 +320,10 @@ function getFruitEmojiForLevel(l) {
 function getFruitNameForLevel(l) {
     const idx = (l - 1) % levelFruitNames.length;
     return levelFruitNames[idx];
+}
+
+function isBossLevel(l) {
+    return isAdvancedMode() && l > 0 && l % BOSS_LEVEL_PERIOD === 0;
 }
 
 // ---- ČASOMÍRA ----
@@ -221,14 +355,12 @@ function playSound(sound) {
 function applyDifficultyForLevel() {
     const l = Math.max(1, level);
 
-    // postupně rychlejší a kratší čas zobrazení
     spawnDelay = Math.max(minSpawnDelay, baseSpawnDelay - (l - 1) * 70);
     lifetime   = Math.max(minLifetime,   baseLifetime   - (l - 1) * 160);
     squareSize = Math.max(minSquareSize, baseSquareSize - (l - 1) * 6);
 
-    // když se změní obtížnost, přenastavíme interval
-    if (spawnInterval) {
-        startSpawning(); // restart s novým spawnDelay
+    if (spawnInterval && !inBossFight) {
+        startSpawning();
     }
 }
 
@@ -258,6 +390,7 @@ function showLevelOverlay(levelNumber) {
 
     waitingForLevelStart = true;
     gameOver = false;
+    inBossFight = false;
     levelOverlay.classList.add("visible");
 }
 
@@ -265,17 +398,23 @@ function showGameOver() {
     gameRunning = false;
     waitingForLevelStart = false;
     gameOver = true;
+    inBossFight = false;
 
     stopTimer();
     stopSpawning();
     clearAllSquares();
+
+    if (bossTimerId) {
+        clearTimeout(bossTimerId);
+        bossTimerId = null;
+    }
 
     levelText.innerHTML =
         "KONEC HRY" +
         "<br><span style='font-size:0.6em;'>Skóre: " + score + "</span>" +
         "<br><span style='font-size:0.6em;'>Nejlepší combo: " + bestCombo + "</span>" +
         "<br><span style='font-size:0.6em;'>Zásahy: " + hit + "/" + total + "</span>" +
-        "<br><br><span style='font-size:0.5em;'>Klikni / ťukni pro novou hru</span>";
+        "<br><br><span style='font-size:0.5em;'>Klikni / ťukni pro novou hru (stejný režim)</span>";
 
     levelOverlay.classList.add("visible");
 }
@@ -301,6 +440,12 @@ function resetGame() {
     bestCombo = 0;
     lives = maxLives;
 
+    inBossFight = false;
+    if (bossTimerId) {
+        clearTimeout(bossTimerId);
+        bossTimerId = null;
+    }
+
     timeEl.textContent      = "0.0";
     hitEl.textContent       = "0";
     totalEl.textContent     = "0";
@@ -310,6 +455,17 @@ function resetGame() {
     bestComboEl.textContent = bestCombo;
     livesEl.textContent     = lives;
 
+    // popisek režimu v HUDu
+    if (gameMode === MODE_BASIC) {
+        modeLabelEl.textContent = "Základní";
+    } else if (gameMode === MODE_ADVANCED) {
+        modeLabelEl.textContent = "Pokročilá";
+    } else if (gameMode === MODE_MOVING) {
+        modeLabelEl.textContent = "Pokročilá + pohyb";
+    } else {
+        modeLabelEl.textContent = "-";
+    }
+
     applyDifficultyForLevel();
     showLevelOverlay(level);
 }
@@ -317,24 +473,30 @@ function resetGame() {
 // klik / ťuk na overlay
 levelOverlay.addEventListener("pointerdown", () => {
     if (gameOver) {
-        // Nová hra
+        // nová hra ve stejném režimu
         resetGame();
-        // Hned spustíme level 1
         startLevelIfWaiting();
     } else {
         startLevelIfWaiting();
     }
 });
 
+// --- MENU: výběr režimu ---------------------------------------------------
+modeOverlay.querySelectorAll("button").forEach(btn => {
+    btn.addEventListener("click", () => {
+        gameMode = btn.dataset.mode;
+        modeOverlay.classList.add("hidden");
+        resetGame();
+    });
+});
+
 // ---- PAUZA ----
 function togglePause() {
-    if (waitingForLevelStart || gameOver) return; // v overlay pauzu neřešíme
+    if (waitingForLevelStart || gameOver || !gameMode) return; // v overlay pauzu neřešíme
 
     if (gameRunning) {
         gameRunning = false;
         stopTimer();
-        // spawnInterval necháme běžet, ale spawnSquare nebude tvořit ovoce,
-        // protože gameRunning=false (viz startSpawning)
     } else {
         gameRunning = true;
         startTimer();
@@ -353,7 +515,7 @@ let lastTapTime = 0;
 
 function handleTapPause() {
     const now = Date.now();
-    if (now - lastTapTime < 300) { // druhý tap do 300 ms
+    if (now - lastTapTime < 300) {
         togglePause();
         lastTapTime = 0;
     } else {
@@ -373,7 +535,7 @@ if (isSmallScreen) {
 
 // ---- SKÓRE / ŽIVOTY ----
 function updateComboDisplay() {
-    comboEl.textContent = combo;
+    comboEl.textContent     = combo;
     bestComboEl.textContent = bestCombo;
 }
 
@@ -387,7 +549,7 @@ function registerHit() {
     }
     updateComboDisplay();
 
-    score += 10 * combo; // čím delší série, tím víc bodů
+    score += 10 * combo;
     scoreEl.textContent = score;
 
     playSound(hitSound);
@@ -395,8 +557,8 @@ function registerHit() {
 }
 
 function registerMiss() {
-    // aby se při pauze / overlayi nestrhávaly životy
-    if (!gameRunning || gameOver) return;
+    // aby se při pauze / overlayi / boss fightu nestrhávaly životy
+    if (!gameRunning || gameOver || inBossFight || !gameMode) return;
 
     combo = 0;
     updateComboDisplay();
@@ -411,6 +573,98 @@ function registerMiss() {
     }
 }
 
+// ---- BOSS FIGHT ----
+function startBossFight() {
+    if (gameOver || !isAdvancedMode()) return;
+
+    inBossFight = true;
+    clearAllSquares();
+    stopSpawning();
+    gameRunning = true;   // hra běží, ale nespawnuje normální ovoce
+
+    spawnBoss();
+}
+
+function spawnBoss() {
+    const boss = document.createElement("div");
+    boss.className = "square";
+
+    const bossSize = Math.max(squareSize * 2.2, 140);
+    boss.style.width     = bossSize + "px";
+    boss.style.height    = bossSize + "px";
+    boss.style.fontSize  = (bossSize * 0.7) + "px";
+    boss.style.background = "rgba(255,215,0,0.25)";
+
+    boss.textContent = "👑";
+    boss.dataset.role = "boss";
+
+    const x = (gameArea.clientWidth  - bossSize) / 2;
+    const y = (gameArea.clientHeight - bossSize) / 3;
+
+    boss.style.left = x + "px";
+    boss.style.top  = y + "px";
+
+    bossHP = BOSS_BASE_HP + Math.floor(level * 0.7);
+
+    gameArea.appendChild(boss);
+
+    function hitBoss() {
+        if (!inBossFight || !gameRunning || gameOver) return;
+
+        bossHP--;
+        score += 25;
+        scoreEl.textContent = score;
+        playSound(hitSound);
+
+        if (bossHP <= 0) {
+            boss.remove();
+            finishBossFight(true);
+        }
+    }
+
+    boss.addEventListener("pointerdown", hitBoss);
+    boss.addEventListener("pointerenter", hitBoss);
+
+    bossTimerId = setTimeout(() => {
+        if (inBossFight) {
+            if (boss.parentElement) {
+                boss.remove();
+            }
+            finishBossFight(false);
+        }
+    }, BOSS_TIME_LIMIT);
+}
+
+function finishBossFight(success) {
+    inBossFight = false;
+
+    if (bossTimerId) {
+        clearTimeout(bossTimerId);
+        bossTimerId = null;
+    }
+
+    if (success) {
+        score += 300;
+        scoreEl.textContent = score;
+    } else {
+        const penalty = BOSS_LIFE_PENALTY;
+        combo = 0;
+        updateComboDisplay();
+
+        lives = Math.max(0, lives - penalty);
+        livesEl.textContent = lives;
+
+        if (lives <= 0) {
+            showGameOver();
+            return;
+        }
+    }
+
+    if (!gameOver) {
+        startSpawning();
+    }
+}
+
 // ---- KONTROLA LEVELU PODLE SKÓRE ----
 function checkLevelUp() {
     const newLevel = Math.floor(hit / HITS_PER_LEVEL) + 1;
@@ -418,15 +672,59 @@ function checkLevelUp() {
         level = newLevel;
         levelEl.textContent = level;
         applyDifficultyForLevel();
-        showLevelOverlay(level);
+
+        if (isBossLevel(level)) {
+            startBossFight();
+        } else {
+            showLevelOverlay(level);
+        }
     }
+}
+
+// ---- POHYB OVOCE (pro třetí režim) ----
+function startFruitMovement(square) {
+    if (!isMovingMode()) return;
+
+    let x = parseFloat(square.style.left);
+    let y = parseFloat(square.style.top);
+
+    const speed = 0.7 + Math.random() * 0.8; // px / frame
+    let dx = (Math.random() * 2 - 1) * speed;
+    let dy = (Math.random() * 2 - 1) * speed;
+
+    function step() {
+        if (!square.parentElement || !gameRunning || gameOver || inBossFight || !isMovingMode()) {
+            return;
+        }
+
+        x += dx;
+        y += dy;
+
+        const maxX = gameArea.clientWidth  - square.offsetWidth;
+        const maxY = gameArea.clientHeight - square.offsetHeight - bottomSafeZone;
+        const minY = topSafeZone;
+
+        if (x < 0 || x > maxX) {
+            dx = -dx;
+            x = Math.max(0, Math.min(x, maxX));
+        }
+        if (y < minY || y > maxY) {
+            dy = -dy;
+            y = Math.max(minY, Math.min(y, maxY));
+        }
+
+        square.style.left = x + "px";
+        square.style.top  = y + "px";
+
+        requestAnimationFrame(step);
+    }
+
+    requestAnimationFrame(step);
 }
 
 // ---- GENEROVÁNÍ OVOCE ----
 function spawnSquare() {
-    // interval teď běží stále, ale ovoce se opravdu generuje jen,
-    // když hra běží a není game over
-    if (!gameRunning || gameOver) return;
+    if (!gameRunning || gameOver || inBossFight || !gameMode) return;
 
     const square = document.createElement("div");
     square.className = "square";
@@ -435,8 +733,25 @@ function spawnSquare() {
     square.style.height = squareSize + "px";
     square.style.fontSize = (squareSize * 0.6) + "px";
 
-    // Ovoce odpovídá aktuálnímu levelu – JEN tohle jedno ovoce:
-    square.textContent = getFruitEmojiForLevel(level);
+    let kind  = "normal";
+    let emoji = getFruitEmojiForLevel(level);
+
+    if (isAdvancedMode()) {
+        const r = Math.random();
+        if (r < GOLD_CHANCE) {
+            kind  = "gold";
+            emoji = GOLD_EMOJI;
+        } else if (r < GOLD_CHANCE + HEART_CHANCE) {
+            kind  = "heart";
+            emoji = HEART_EMOJI;
+        } else if (r < GOLD_CHANCE + HEART_CHANCE + BOMB_CHANCE) {
+            kind  = "bomb";
+            emoji = BOMB_EMOJI;
+        }
+    }
+
+    square.dataset.kind = kind;
+    square.textContent  = emoji;
 
     const areaW = gameArea.clientWidth  - squareSize;
     const maxH  = gameArea.clientHeight - squareSize - bottomSafeZone;
@@ -455,21 +770,52 @@ function spawnSquare() {
     let hitRegistered = false;
 
     function onHit() {
-        if (hitRegistered || !gameRunning || gameOver) return;
+        if (hitRegistered || !gameRunning || gameOver || inBossFight || !gameMode) return;
         hitRegistered = true;
 
+        const kind = square.dataset.kind || "normal";
         square.remove();
+
+        if (kind === "bomb" && isAdvancedMode()) {
+            combo = 0;
+            updateComboDisplay();
+
+            if (lives > 0) {
+                lives = Math.max(0, lives - 2);
+                livesEl.textContent = lives;
+                playSound(missSound);
+                if (lives <= 0) {
+                    showGameOver();
+                }
+            }
+            return;
+        }
+
         registerHit();
+
+        if (isAdvancedMode()) {
+            if (kind === "gold") {
+                score += 150;
+                scoreEl.textContent = score;
+            } else if (kind === "heart") {
+                if (lives < maxLives) {
+                    lives++;
+                    livesEl.textContent = lives;
+                }
+            }
+        }
     }
 
-    // Desktop: přejetí myší (pointerenter),
-    // Mobil i PC: ťuknutí/klik (pointerdown).
     square.addEventListener("pointerenter", onHit);
     square.addEventListener("pointerdown", onHit);
 
     gameArea.appendChild(square);
 
-    // Zmizí po čase 'lifetime'
+    // pohyb ovoce jen v třetím režimu
+    if (isMovingMode()) {
+        startFruitMovement(square);
+    }
+
     setTimeout(() => {
         if (square.parentElement) {
             square.remove();
@@ -479,7 +825,8 @@ function spawnSquare() {
 }
 
 function startSpawning() {
-    // vždycky zrušíme starý interval a založíme nový, aby respektoval spawnDelay
+    if (inBossFight || !gameMode) return;
+
     if (spawnInterval) {
         clearInterval(spawnInterval);
     }
@@ -503,27 +850,19 @@ function clearAllSquares() {
 
 // ---- Klik/tap do herní plochy ----
 gameArea.addEventListener("pointerdown", e => {
-    // Mobilní dvojťuk pro pauzu
     if (isSmallScreen && e.pointerType === "touch") {
         handleTapPause();
     }
 
-    // Start hry z pauzy (pokud zrovna nečekáme na overlay ani není game over)
-    if (!gameRunning && !waitingForLevelStart && !gameOver) {
+    if (!gameRunning && !waitingForLevelStart && !gameOver && !inBossFight && gameMode) {
         gameRunning = true;
         startTimer();
-        // spawnInterval už běží – stačí jen povolit spawnSquare přes gameRunning=true
     }
 });
 
-// ---- START: level 1, overlay na začátku ----
-applyDifficultyForLevel();
-levelEl.textContent = level;
-livesEl.textContent = lives;
-scoreEl.textContent = score;
-comboEl.textContent = combo;
-bestComboEl.textContent = bestCombo;
-showLevelOverlay(level);
+// --- START: zobrazí se menu, hra čeká na výběr režimu ---
+modeLabelEl.textContent = "-";
 </script>
+
 </body>
 </html>
